syntax = "proto3";

package agent;

option go_package = "github.com/zhinea/sylix/internal/infra/proto/agent";

service Agent {
    rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
    rpc Ping (PingRequest) returns (PingResponse);
}

message GetStatusRequest {}

message GetStatusResponse {
    string status = 1;
    string version = 2;
    int64 uptime = 3;
}

message HeartbeatRequest {
    string agent_id = 1;
    int64 timestamp = 2;
}

message HeartbeatResponse {
    bool acknowledged = 1;
}

message PingRequest {
    int64 timestamp = 1;
}

message PingResponse {
    int64 timestamp = 1;
    string status = 2;
}
